--- a/RTT/App.config
+++ b/RTT/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="RTTContext" connectionString="Data Source=larry-pc,1433;Initial Catalog=RTT;Persist Security Info=True;User ID=sa;Password=cooter;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="RTTContext" connectionString="Data Source=192.168.1.173,1433;Initial Catalog=RTT;Persist Security Info=True;User ID=sa;Password=cooter;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
